apps/base/litellm/litellm.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm-ingress
  namespace: litellm-system
spec:
  ingressClassName: traefik
  rules:
    - host: litellm.tinyrack.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: litellm-service
                port:
                  name: http

  tls:
    - hosts:
        - "litellm.tinyrack.net"
      secretName: letsencrypt-wildcard-cert-tinyrack.net
